# sharedState

./: README.md  sharedState.cabal  stack.yaml
app/: Main.hs
src/SharedState/: SharedState.hs
