name:                sharedState
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oofp/sharedState#readme
license:             BSD3
license-file:        LICENSE
author:              oofp
maintainer:          oofpgit@gmail.com
copyright:           2017 oofp
category:            mtl
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/SharedState
  ghc-options:         -Wall
  exposed-modules:     SharedState
  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , stm
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable shareStateSample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sharedState
                     , mtl
                     , stm
                     , transformers
                     , async
                     , unbounded-delays
                     , concurrent-extra
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite webTools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , sharedState
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/oofp/sharedState
